css/style.css
* {
  padding: 0;
  margin: 0;
}
body {
  overflow: hidden;
  background: url(../images/background.jpg) no-repeat center fixed; 
  background-color: rgba(200, 201, 201, 0.25);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  width: 100%;
  min-width: 940px;
  font: 13px "Helvetica-Neue", Helvetica, sans-serif;
  line-height: 20px;
  letter-spacing: 1px;
}
body:before {
  content: "";
  display: block;
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  z-index: -1;
  background-color: rgba(219, 219, 219, 0.4);
}
body nav {
  margin: 0 auto;
  padding-top: 50px;
  padding-bottom: 18px;
  width: 100%;
  background-size: 100%;
  background: rgba(246, 246, 246, 0.4);
  font: 17px Roboto;
  letter-spacing: 4px;
  text-transform: lowercase;
  text-align: center;
  list-style-type: none; 
}
body nav ul {
  list-style-type: none;
}
body nav ul li {
  display: inline-block;
  padding-right: 13px;
}
body nav ul li a {
  color: #636363;
  text-decoration: none;
}
body nav ul li h1 {
  text-decoration: none;
  width: 170px;
  height: auto;
  margin-right: -35px;
}
body nav ul li a:hover {
  color: #686868;
  text-decoration: none;
  border-bottom: none;
}
body p {
  margin: 0 auto;
  padding-top: 70px;
  font: 12px 'Roboto Condensed', sans-serif;
  color: #444;
  line-height: 20px;
}
body p .about {
  padding-left: 10px;
}
body p .projects {
  text-align: center;
}
ul {
  list-style-type: none; 
  padding-top: 65px;
}
li {
  border-width: 2px;
  line-height: 35px;
  font-size: 15px; 
}
a {
  color: #636363;
  text-decoration: none;
}
a:hover {
  color: #f0f8ff;
  text-decoration: none;
  border-bottom: none;
}
.underl a:hover {
  text-decoration: none;
  border-bottom: 6px solid #363636;
  padding-bottom: 21px;
  padding-right: -13px;
 
}
h1 {
  font-size: 21px;
  margin-right:-48px;
  margin-left: -48px;
}
h3 {
  font-size: 16px;
  font-weight: 400;
  color: #f0f8ff;
}
h4 {
  text-decoration: none;
  font-size: 12px;
  font-weight: 400;
  line-height: 25px;
}
img {
  width: 50%; 
  height: 70%;
  margin: 0;
  padding: 0;
}
.container {
  width: 100%;
}
.center {
   margin: 0 auto !important;
   float: none !important;
}
::selection {
  background: #ffb7b7; /* WebKit/Blink Browsers */
}
::-moz-selection {
  background: #ffb7b7; /* Gecko Browsers */
}

